--- a/dockerfiles/deploy/requirements.txt
+++ b/dockerfiles/deploy/requirements.txt
@@ -5,16 +5,27 @@ Flask==3.0.0
 Flask-Login==0.6.3
 flask-smorest==0.42.3
 Flask-SQLAlchemy==3.1.1
+ghp-import==2.1.0
 greenlet==3.0.2
 gunicorn==21.2.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Markdown==3.5.1
 MarkupSafe==2.1.3
 marshmallow==3.20.1
+mergedeep==1.3.4
+mkdocs==1.5.3
 packaging==23.2
+pathspec==0.12.1
 Pillow==10.1.0
+platformdirs==4.1.0
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+PyYAML==6.0.1
+pyyaml_env_tag==0.1
+six==1.16.0
 SQLAlchemy==2.0.23
 typing_extensions==4.9.0
+watchdog==3.0.0
 webargs==8.3.0
 Werkzeug==3.0.1
