--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,51 @@
 apispec==6.3.0
+Babel==2.14.0
 blinker==1.7.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
 click==8.1.7
+colorama==0.4.6
+emojidb==0.0.3
 Flask==3.0.0
 Flask-Login==0.6.3
 flask-smorest==0.42.3
 Flask-SQLAlchemy==3.1.1
 ghp-import==2.1.0
 greenlet==3.0.2
+griffe==0.38.1
 gunicorn==21.2.0
+idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.2
+lightgallery==0.5
 Markdown==3.5.1
+markdown-extensions==0.0.1
 MarkupSafe==2.1.3
 marshmallow==3.20.1
 mergedeep==1.3.4
 mkdocs==1.5.3
+mkdocs-autorefs==0.5.0
+mkdocs-material==9.5.3
+mkdocs-material-extensions==1.3.1
+mkdocstrings==0.24.0
+mkdocstrings-python==1.7.5
 packaging==23.2
+paginate==0.5.6
 pathspec==0.12.1
 Pillow==10.1.0
 platformdirs==4.1.0
+Pygments==2.17.2
+pymdown-extensions==10.6
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 PyYAML==6.0.1
 pyyaml_env_tag==0.1
+regex==2023.12.25
+requests==2.31.0
 six==1.16.0
 SQLAlchemy==2.0.23
 typing_extensions==4.9.0
+urllib3==2.1.0
 watchdog==3.0.0
 webargs==8.3.0
 Werkzeug==3.0.1
