--- a/dockerfiles/deploy/requirements.txt
+++ b/dockerfiles/deploy/requirements.txt
@@ -8,6 +8,7 @@ colorama==0.4.6
 emojidb==0.0.3
 Flask==3.0.0
 Flask-Login==0.6.3
+Flask-Mail==0.9.1
 flask-smorest==0.42.3
 Flask-SQLAlchemy==3.1.1
 ghp-import==2.1.0
