Alteração no arquivo .env_example

--- a/.env_example
+++ b/.env_example
@@ -15,6 +15,9 @@ EMAIL_PASSWORD=''
 SMTP=''
 SMTP_PORT='587'
 EMAIL_FROM=''
+# - 1(Ativo), 0 (Inativo)
+USE_TLS='1'
+USE_SSL='0'
 
 # Propriedade para definir se o aplicativo esta em modo debug ou nao
 # 1 (Debug ativo), 0 (Debug não ativo)
