--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@uiw/react-color": "^2.0.3",
     "axios": "^1.6.2",
     "emoji-picker-react": "^4.5.16",
+    "framer-motion": "^10.17.4",
     "image-extensions": "^1.1.0",
     "is-hotkey": "^0.2.0",
     "is-url": "^1.2.4",
@@ -23,6 +24,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-infinite-scroll-hook": "^4.1.1",
+    "react-lottie": "^1.2.3",
     "react-quick-pinch-zoom": "^5.1.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^5.3.0",
@@ -33,9 +36,11 @@
     "react-use": "^17.4.2",
     "redux": "^5.0.0",
     "redux-thunk": "^2.4.1",
-    "slate": "^0.101.4",
-    "slate-history": "^0.100.0",
-    "slate-react": "^0.101.3",
+    "reselect": "^5.0.1",
+    "slate": "^0.90.0",
+    "slate-history": "^0.86.0",
+    "slate-react": "^0.90.0",
+    "swr": "^2.2.4",
     "text-mask-addons": "^3.8.0",
     "web-vitals": "^2.1.0",
     "yup": "^1.3.3"
