--- a/.env_example
+++ b/.env_example
@@ -19,6 +19,8 @@ EMAIL_FROM=''
 USE_TLS='1'
 USE_SSL='0'
 
+URL_PUBLIC='http://127.0.0.1:5000'
+
 # Propriedade para definir se o aplicativo esta em modo debug ou nao
 # 1 (Debug ativo), 0 (Debug não ativo)
 APP_DEBUG='0'
