--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-text-mask": "^5.5.0",
     "react-toastify": "^9.1.3",
     "react-use": "^17.4.2",
+    "recharts": "^2.1.9",
     "redux": "^5.0.0",
     "redux-thunk": "^2.4.1",
     "reselect": "^5.0.1",
