Registro de tarefa para auto_fechamento de tickets habilitada no sistema

--- a/.env_example
+++ b/.env_example
@@ -20,6 +20,8 @@ USE_TLS='1'
 USE_SSL='0'
 
 URL_PUBLIC='http://127.0.0.1:5000'
+# - 1(Ativo) 0 (Inativo) -> Ativar executor de tarefas
+SCHEDULER_API_ENABLED='1'
 
 # Propriedade para definir se o aplicativo esta em modo debug ou nao
 # 1 (Debug ativo), 0 (Debug não ativo)
