--- a/dockerfiles/deploy/requirements.txt
+++ b/dockerfiles/deploy/requirements.txt
@@ -1,4 +1,5 @@
 apispec==6.3.0
+APScheduler==3.10.4
 Babel==2.14.0
 blinker==1.7.0
 certifi==2023.11.17
@@ -7,6 +8,7 @@ click==8.1.7
 colorama==0.4.6
 emojidb==0.0.3
 Flask==3.0.0
+Flask-APScheduler==1.13.1
 Flask-Login==0.6.3
 Flask-Mail==0.9.1
 flask-smorest==0.42.3
@@ -39,6 +41,7 @@ Pygments==2.17.2
 pymdown-extensions==10.6
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3.post1
 PyYAML==6.0.1
 pyyaml_env_tag==0.1
 regex==2023.12.25
@@ -46,6 +49,7 @@ requests==2.31.0
 six==1.16.0
 SQLAlchemy==2.0.23
 typing_extensions==4.9.0
+tzlocal==5.2
 urllib3==2.1.0
 watchdog==3.0.0
 webargs==8.3.0
