Atualização visual nas rotas para se adaptarem ao Mobile

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Aplicativo Helpdesk",
+  "name": "Aplicativo de controle de chamados",
   "icons": [
     {
       "src": "favicon.ico",
